hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_unqualified_function.snap
---
source: hir/src/passes/resolver.rs
expression: "UnresolvedHir ::\nfrom(compilation_unit.into_ast().unwrap()).resolve(Natives :: new())"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No function 'f' found for parameters of types ()",
                span: 6:13; [89, 90],
                level: Error,
            },
        ],
        inputs: (),
    },
)
